--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "proxy": "http://localhost:5173",
   "type": "module",
   "scripts": {
     "dev": "nodemon backend/index.js",
